plugins {
    id 'org.springframework.boot' version '2.5.3'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.regions'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "16"

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'mysql:mysql-connector-java'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
    implementation "org.mapstruct:mapstruct:1.5.5.Final"
    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.5.3'

    //Performance monitor dependencies
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.6.3'

    //Lombok
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'

    // Testing
    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.5.0'
    implementation group: 'io.rest-assured', name: 'json-path', version: '4.5.0'
    implementation group: 'io.rest-assured', name: 'xml-path', version: '4.5.0'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.22.0'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.5'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
}

test {
    useJUnitPlatform()
}
targetCompatibility = JavaVersion.VERSION_16

test {
    systemProperty 'spring.profiles.active', 'dev'
}